Style fix to prevent AR button from covering text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@ body {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 100vw;
-  height: 100svh;
+  width: 100svw;
+  height: calc(100svh - 60px);
   transform: translate(-50%, -50%);
 }
 
